User Follow and Email Verification
Follow logic added and email verification added